src/experiment_tracking/k8s/mlflow_nodeport.yml
apiVersion: v1
kind: Service
metadata:
  name: mlflow-nodeport
  namespace: mlflow
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: mlflow
  ports:
  - port: 80
    targetPort: 5000
    nodePort: 30080
