src/experiment_tracking/k8s/mlflow_service.yml
apiVersion: v1
kind: Service
metadata:
  name: mlflow-hello
spec:
  type: ClusterIP
  selector:
    app: mlflow-hello
  ports:
    - port: 80
      targetPort: 80
